<resources>
    <string name="app_name">ManSheTV</string>
    <string name="fontSize10sp">10sp</string>
    <string name="fontSize12sp">12sp</string>
    <string name="fontSize14sp">14sp</string>
    <string name="fontSize16sp">16sp</string>
    <string name="fontSize18sp">18sp</string>
    <string name="fontSize20sp">20sp</string>
    <string name="fontSize22sp">22sp</string>
    <string name="fontSize24sp">24sp</string>
    <string name="main_tiaoguo">跳过3</string>
    <string name="home_mian_id">首页</string>
    <string name="column_home_id">排行榜</string>
    <string name="my_home_id">我的</string>
    <string name="the_film">电影</string>
    <string name="Series">连续剧</string>
    <string name="Variety_Show">综艺</string>
    <string name="Anime">动漫</string>
    <string name="morenyingpList">榜单</string>
    <string name="browserecords">浏览记录</string>
    <string name="mycache">我的缓存</string>
    <string name="undone">未完成</string>
    <string name="completed">已完成</string>
    <string name="download"></string>
    <string name="morenyingp">海量影片看不停</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="listgd">查看更多 ></string>
    <string name="Popular_recommendation">热播推荐</string>
    <string name="dialog_upgrade_title">发现新版本，快下载体验吧！</string>
    <string name="dialog_upgrade_message">1、新增了xxxxxx\n2、修复了xxxxxx\n3、优化了xxxxxx</string>
    <string name="dialog_upgrade_date">发布日期 [%1$s]</string>
    <string name="dialog_upgrade_versions">版本号 [%1$s]</string>
    <string name="dialog_upgrade_size">安装包 [%1$s]</string>
    <string name="dialog_upgrade_progress">%1$d%%</string>
    <string name="dialog_upgrade_btn_negative">以后再说</string>
    <string name="dialog_upgrade_btn_positive">立即体验</string>
    <string name="dialog_upgrade_btn_neutral">忽略更新</string>
    <string name="dialog_upgrade_btn_pause">暂停</string>
    <string name="dialog_upgrade_btn_resume">继续</string>
    <string name="dialog_upgrade_btn_complete">安装</string>
    <string name="dialog_upgrade_btn_check">效验中&#8230;</string>
    <string name="dialog_upgrade_btn_install">安装中&#8230;</string>
    <string name="dialog_upgrade_btn_reset">重试</string>
    <string name="dialog_upgrade_btn_launch">重启</string>
    <string name="message_connect_success">连接成功</string>
    <string name="message_connect_failure">连接失败，服务已存在客户端实例！</string>
    <string name="message_disconnect_success">断开连接成功</string>
    <string name="message_disconnect_failure">断开连接失败</string>
    <string name="message_check_for_update">获取更新中&#8230;</string>
    <string name="message_check_for_update_failure">获取更新失败，请稍候重试！</string>
    <string name="message_check_for_update_no_available">已安装最新版本！</string>
    <string name="message_download_start">下载连接中&#8230;.</string>
    <string name="message_download_pause">下载暂停</string>
    <string name="message_download_cancel">下载取消</string>
    <string name="message_download_error">下载出错</string>
    <string name="message_download_complete">下载完成</string>
    <string name="message_install_validate">安装包效验中&#8230;</string>
    <string name="message_install_start">安装中&#8230;</string>
    <string name="message_install_error">安装失败</string>
    <string name="message_install_complete">安装完成</string>
    <string name="message_install_cancel">安装取消</string>
    <string name="message_install_package_invalid">安装包无效</string>
    <string name="message_install_package_delete">安装已完成，已自动删除安装包</string>
    <string name="xieyi">\t\t欢迎使用绍兴市弘禾网络科技发展有限公司产品，本公司通过其所属的
    网站提供的基于互联网和移动网的相关服务,本服务协议适用于用户使用本公司提供的所有网络服务。用户在注册过程
    中点击“同意”按钮即表示用户完全接受“本协议”项下的全部条款\n\n\t\t请用户在访问和使用网络服务前仔细阅读“本协议”，用户访问或使用
    本公司提供的网络服务，将视为用户同意并接受“本协议”全部条款的约束。用户不能以未阅读“本协议”或对“本
    协议”有任何误解为由，主张“本协议”无效或要求撤销“本协议”\n\n\t\t1.修改。
    </string>
    <string name="fwxytitle">
        红禾影视权利声明与用户服务协议
    </string>
    <string name="fwxydate">
        \n本版本更新时间：2020年11月18日\n\n本版本生效时间：2020年11月18日\n
    </string>
    <string name="yszctitle">
        红禾影视隐私政策
    </string>
    <string name="yszcdate">
        \n本版本更新时间：2020年11月18日\n\n本版本生效时间：2020年11月18日\n
    </string>
    <string-array name="fwxy">
        <item>\n红禾影视权利声明：\n\n\t\t欢迎您使用红禾影视的服务！
　　\n\t\t为使用红禾影视的服务，您应当阅读并遵守《红禾影视权利声明》和《红禾影视用户服务协议》。
            请您务必审慎阅读、充分理解各条款内容，特别是免除或者限制责任的条款、管辖与法律适用条款。
            限制、免责条款可能以加粗或加下划线的形式提示您重点注意。除非您已阅读并接受本协议所有条款，
            否则您无权使用红禾影视提供的服务。您使用红禾影视的服务即视为您已阅读并同意上述协议的约束。\n\n\n\t</item>
        <item>1、红禾影视（以下简称“红禾影视”）是一款内容聚合软件，为广大用户、媒体提供展示自己优质内容的平台。
        \n\t2、红禾影视中包含的任何文字、图表、音频、视频及界面、数据和程序、代码、文档等均受知识产权或其他法律
            保护；除用户依法享有的版权内容外，本软件的整体内容版权归绍兴弘禾网络科技有限公司（以下简称我方）
            所有。我方所有和享有的知识产权，不因任何单位和个人的任何使用行为而发生转移。\n\t
        3、红禾影视所有设计图样、其他图样、产品及服务名称，均为我方及/或其关联公司所享有的商标、标识，未经我方同意任何人不得使用、复制或用作其他用途。\n\t
        4、我方对专有内容、原创内容和其他通过授权取得的独家或非独家内容享有完全知识产权。经由本软件传送的
            视频及其它内容，受到著作权法、商标法、专利法或其他法律的保护。本软件所有内容（包括但不限于视
            频、特有图形、标志、页面风格、编排方式、程序等），任何媒体或个人未经我方事先书面授权不得在互联
            网上转载、链接、变更、发行、传播、复制、重制、改动、表演、以其他方式复制发布/发表、衍生其他作
            品、表演或录音录像制品、创作衍生品或用于任何商业用途，且不得以任何形式展示我方节目的视频资源
            或捕捉视频资源而形成的图像。对不遵守本声明或其他违法、恶意使用我方内容者，我方保留追究其法律责
            任的权利。对于不当转载或引用我方内容而引起的民事纠纷、行政处罚或其他损失，我方不承担任何责任。\n\t
        5、关于反盗版和防盗链等技术措施声明我方已经对本软件内全部正版授权的视频内容，采取了必要的反盗版和
            防盗链等技术措施，并且添加、设置权利管理电子信息。任何单位或个人，未经我方许可，不得以任何方
            式（包括但不限于：盗链、冗余盗取等）直接或间接地盗取相关视频内容、不得以任何方式（包括但不限于
            ：隐藏或者修改本软件域名、播放器软件、我方标识等）删除或者改变相关视频内容的权利管理电子信息。
            否则，我方将保留进一步追究侵权者法律责任的权利。\n\t
            6、我方致力于保护版权所有者的权利，我们遵守《信息网络传播权保护条例》等相关法律法规。要将视
            频从我方删除，请用户通过我方版权通知专用接收电子邮箱：</item>
        <item>sf383638@gmail.com</item>
        <item>提供书面材料，阐明下述各项内容。请注意，根据相关法律法规的规定，如果用户实质上谎称拥有事实
            上并不拥有权利的视频，可能需要对涉嫌侵权人的损失（包括但不限用诉讼费及律师费）负责。因此，如
            果用户不能确定自己是否有权申请从我方删除视频，建议用户先咨询律师。
            \n\t为便于我们快速处理用户的申请，请采用以下格式（包括节号）：\n\t
            （1）向我们发送用户希望从软件中删除的每个视频的名称及准确网址。\n\t
        （2）提供便于我方与用户（权利人）联络的充分信息姓名（名称）、联系方式和地址（最好是电子
            邮件地址），便于我方通知涉嫌发布含有侵权材料的网页的所有者/管理员。\n\t
            （3）向我方提供构成侵权的初步证明材料。\n\t
        （4）请加入以下声明：“本着善意诚信，我认为在上述涉嫌侵权的网页上对版权材料的使用未得到版权
            所有者、其代理或法律的授权。”\n\t
            （5）请加入以下声明：“我在此承诺，此通知中所提供的信息准确、真实，并且本人是版权所有者或
            涉嫌被侵犯的专有权所有者的授权代理人。如做伪证，愿受惩处。”\n\t
        （6）在上述文件上签名。请注意，我们会将收到的每个法律通知的副本发送给第三方合作伙伴并由其公布和评注。\n\t
           （7）、本声明的版权归我方所有，我方保留对本声明的一切解释和修改权利。\n\n\n\t\t</item>
        <item>红禾影视用户服务协议：\n1、服务条款的确认和接纳</item>
        <item>\n\t\t本网站及APP的各项内容和服务的所有权归本公司拥有。用户在接受本服务之前，请务必仔细
            阅读本条款。用户使用服务，或通过完成注册程序，表示用户接受所有服务条款。\n\n</item>
        <item>2、用户同意：\n</item>
        <item>\t\t(1) 提供及时、详尽及准确的个人资料。\n\t\t
            (2) 不断更新注册资料、符合及时、详尽、准确的要求。\n\t\t如果用户提供的资料不准确，本网站有结束服务的权利。\n\t\t
        </item>
        <item>本网站及APP将不公开用户的姓名、地址、电子邮箱、帐号和电话号码等信息（请阅隐私保护条款）。</item>
        <item>用户在本网站和APP的任何行为必须遵循：\n\t\t
            (1) 传输资料时必须符合中国有关法规。\n\t\t
        (2) 使用信息服务不作非法用途和不道德行为。\n\t\t
        (3) 不干扰或混乱网络服务。\n\t\t
        (4) 遵守所有使用服务的网络协议、规定、程序和惯例。用户的行为准则是以因特网法规，政策、程序和惯例为根据的。</item>
        <item>\n\n3、服务条款的修改</item>
        <item>\n\t\t本网站及APP有权在必要时修改条款，将会在页面公布。
        \n\t\t如果不接受所改动的内容，用户可以主动取消自己的会员资格。如果您不取消自己的会员资格，则视
            为接受服务条款的变动。</item>
        <item>\n\n4、 用户的帐号、密码和安全性</item>
        <item>\n\t\t一旦成功注册成为会员，您将有一个密码和用户名。
            \n\t\t用户将对用户名和密码的安全负全部责任。另外，每个用户都要对以其用户名进行的所有活动和事件负全责
            。您可以随时改变您的密码。
        \n\t\t用户若发现任何非法使用用户帐号或存在安全漏洞的情况，请立即通告本公司。</item>
        <item>\n\n5、拒绝提供担保</item>
        <item>\n\t\t用户明确同意使用本公司服务，由用户个人承担风险。\n\t\t本网站及APP不担保服务一定满足用户的要求，
            也不担保服务不会中断，对服务的及时性、安全性、出错发生都不作担保。\n\t\t用户理解并接受：任何通过服务
            取得的信息资料的可靠性有用性取决于用户自己的判断，用户自己承担所有风险和责任。</item>
        <item>\n\n6、有限责任</item>
        <item>\n\t\t本网站及APP对任何由于使用服务引发的直接、间接、偶然及继起的损害不负责任。
            \n\t\t这些损害可能来自（包括但不限于）：不正当使用服务，或传送的信息不符合规定等。</item>
        <item>\n\n7、对用户信息的存储和限制</item>
        <item>\n\t\t本网站及APP不对用户发布信息的删除或储存失败负责，本公司有判定用户的行为是否符合服务
            条款的要求和精神的保留权利。如果用户违背了服务条款的规定，有中断对其提供服务的权利。</item>
        <item>\n\n8、结束服务</item>
        <item>\n\t\t本网站及APP可随时根据实际情况中断一项或多项服务，不需对任何个人或第三方负责或知会。
        \n\t\t同时用户若反对任何服务条款的建议或对后来的条款修改有异议，或对服务不满，用户可以行使如下权利：
        \n\t\t(1) 不再使用本公司的服务。
        \n\t\t(2) 通知本公司停止对该用户的服务。</item>
        <item>\n\n9、信息内容的所有权\n\t\t本公司的信息内容包括：文字、软件、声音、相片、录象、图表；以及
            其它信息，所有这些内容受版权、商标、标签和其它财产所有权法律的保护。\n\t\t用户只能在授权下才能
            使用这些内容，而不能擅自复制、再造这些内容、或创造与内容有关的派生产品。\n\n10、隐私保护条款
        \n\t\t本网站及APP将严格保守用户的个人隐私，承诺未经过您的同意不将您的个人信息任意披露。
        \n\t\t但在以下情形下，我们将无法再提供您前述保证而披露您的相关信息。这些情形包括但不限于：
        \n\t\t* 为了您的交易顺利完成，我们不得不把您的某些信息，如您的姓名、联系电话、e-mail等提供给相
            关如物流服务方，以便于他们及时与您取得联系，提供服务。
        \n\t\t* 当您在本网站的行为违反的服务条款，或可能损害他人权益或导致他人遭受损害，只要我们相信披露
            您的个人资料是为了辨识、联络或采取法律行动所必要的行动时。
        \n\t\t* 法律法规所规定的必须披露或公开的个人信息。
        \n\t\t* 当司法机关或其它有权机关依法执行公务，要求提供特定个人资料时，我们必须给予必要的配合。\n\n11、适用法律</item>
        <item>\n\t\t上述条款将适用中华人民共和国的法律，所有的争端将诉诸于本网所在地的人民法院。\n\t\t如发生服务条款与
            中华人民共和国法律相抵触时，则这些条款将完全按法律规定重新解释，而其它条款则依旧保持约束力</item>
    </string-array>
</resources>